--- a/src/layouts/components/ChessSquare.css
+++ b/src/layouts/components/ChessSquare.css
@@ -30,3 +30,20 @@
 .square img {
     width: 60px;
 }
+
+.square-highlight:not(.chess-piece-square)::before {
+    content: " ";
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: (0,0,0, 0.4);
+}
+
+.square-highlight.chess-piece-square::before {
+    position: absolute;
+    content: " ";
+    width: 65px;
+    height: 65px;
+    border: 5px solid rgba(0,0,0,0.4);
+    border-radius: 50%;
+}
