--- a/src/layouts/components/Chessboard.css
+++ b/src/layouts/components/Chessboard.css
@@ -68,19 +68,24 @@
 .move-history {
     position: absolute;
     top: 0;
-    right: 10px; /* Adjust this value as needed */
-    width: 200px; /* Adjust the width as needed */
+    right: 0;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 5px;
 }
 
 .moves-container {
-    background-color: rgba(255, 255, 255, 0.8); /* Add background color */
-    padding: 10px; /* Add some padding */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .move-pair {
+    display: inline-block; /* Display move pairs in a row */
     margin-bottom: 5px; /* Add some margin between move pairs */
 }
 
 .move-pair span {
     display: block; /* Display moves on separate lines */
 }
+
