--- a/src/layouts/components/ChessSquare.css
+++ b/src/layouts/components/ChessSquare.css
@@ -36,7 +36,7 @@
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    background-color: (0,0,0, 0.4);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .square-highlight.chess-piece-square::before {
