--- a/src/layouts/pages/RulesAndTutorial.css
+++ b/src/layouts/pages/RulesAndTutorial.css
@@ -2,10 +2,17 @@
     font-weight: bold;
     font-size: 1.5em;
 }
+h1 {
+    color: white
+}
 
+h2 {
+    color: white
+}
 li {
-    text-indent: -1em; 
+    text-indent: 1em; 
     padding-left: 1em;
+    color: white
 }
 
 p {
