--- a/src/layouts/pages/RulesAndTutorial.module.css
+++ b/src/layouts/pages/RulesAndTutorial.module.css
@@ -2,19 +2,19 @@
     font-weight: bold;
     font-size: 1.5em;
 }
-h1 {
+.h1 {
     color: white
 }
 
-h2 {
+.h2 {
     color: white
 }
-li {
+.li {
     text-indent: 1em; 
     padding-left: 1em;
     color: white
 }
 
-p {
+.p {
     color: white
 }
