--- a/src/layouts/components/Chessboard.css
+++ b/src/layouts/components/Chessboard.css
@@ -42,17 +42,17 @@
     cursor: pointer;
 }
 
-.modal > .modal-body > .checkmate-body {
+.modal > .modal-body > .gameover-body {
     display: flex;
     flex-direction: column;
     gap: 48px;
 }
 
-.modal > .modal-body > .checkmate-body > span {
+.modal > .modal-body > .gameover-body > span {
     font-size: 32px;
 }
 
-.modal > .modal-body > .checkmate-body > button {
+.modal > .modal-body > .gameover-body > button {
     background-color: #779556;
     border: none;
     border-radius: 8px;
@@ -61,7 +61,7 @@
     color: white;
 }
 
-.modal > .modal-body > .checkmate-body > button:hover {
+.modal > .modal-body > .gameover-body > button:hover {
     cursor: pointer;
 }
 
