Fixed bug where Bishop and Knight record out of board positions. Added hover for forfeit button

--- a/src/layouts/components/Chessboard.css
+++ b/src/layouts/components/Chessboard.css
@@ -124,3 +124,7 @@
     text-align: center;
     text-transform: 10px;
 }
+
+.forfeit-button:hover {
+    background-color: lightgray; /* Change background color on hover */
+}
