--- a/src/layouts/components/ChessSquare.css
+++ b/src/layouts/components/ChessSquare.css
@@ -3,12 +3,16 @@
     height: 75px;
 }
 
-.dark-tile{
+.dark-tile {
     background-color: #363636;
 }
 
 .light-tile {
     background-color: #595959;
+}
+
+.square-highlight {
+    box-shadow: 0 0 10px 3px rgba(255, 215, 0, 0.7); /* Gold glow around the square */
 }
 
 .square .chess-piece {
@@ -25,25 +29,4 @@
 
 .square .chess-piece:active {
     cursor: grabbing;
-}
-
-.square img {
-    width: 60px;
-}
-
-.square-highlight:not(.chess-piece-square)::before {
-    content: " ";
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: rgba(0,0,0,0.4);
-}
-
-.square-highlight.chess-piece-square::before {
-    position: absolute;
-    content: " ";
-    width: 75px;
-    height: 75px;
-    border: 5px solid rgba(0,0,0,0.4);
-    border-radius: 50%;
 }
