--- a/src/layouts/components/ChessSquare.css
+++ b/src/layouts/components/ChessSquare.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .square {
     width: 75px;
     height: 75px;
@@ -13,6 +17,7 @@
 
 .square-highlight {
     box-shadow: 0 0 10px 3px rgba(255, 215, 0, 0.7); /* Gold glow around the square */
+    @apply border-yellow-200 border-2 border-opacity-80;
 }
 
 .square .chess-piece {
